# whisper-ptt

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  config.example.toml  pyproject.toml
.agents/skills/addskill/: SKILL.md
.agents/skills/applying-best-practices/: SKILL.md
.agents/skills/brainstorming/: SKILL.md
.agents/skills/caveman/: SKILL.md
.agents/skills/conflict/: SKILL.md
.agents/skills/dispatching-parallel-agents/: SKILL.md
.agents/skills/enhance-prompt/: SKILL.md
.agents/skills/executing-plans/: SKILL.md
.agents/skills/finishing-a-development-branch/: SKILL.md
.agents/skills/handoff-audit/: SKILL.md
.agents/skills/impartial-review/: SKILL.md
.agents/skills/learning/: SKILL.md
.agents/skills/merge/: SKILL.md
.agents/skills/optimize-context/: SKILL.md
.agents/skills/pr/: SKILL.md
.agents/skills/recall/: SKILL.md
.agents/skills/safe-ship/: SKILL.md
.claude/: settings.json
.claude/reference/: architecture.md  commands.md  deployment.md  pitfalls.md  secrets.md  tech-stack.md
.claude/scripts/: sync-codex-skills.mjs
.claude/skills/: PROVENANCE.md
.github/workflows/: ci.yml  release.yml
packaging/: entry.py
scripts/: build_portable.py  fetch_model.py  install-autostart.ps1  make_demo_gif.py  run.ps1
src/whisper_ptt/: __init__.py  __main__.py  app.py  audio.py  config.py  download.py  hotkey.py  icons.py  output.py  sendinput.py  transcriber.py  tray.py  window.py
tests/: test_config_persist.py  test_device_resolution.py  test_download.py  test_model_resolution.py  test_tray_menu.py  test_window.py
(+29 files in other folders)
