[project]
name = "whisper-ptt"
version = "0.2.3"
description = "Local push-to-talk speech-to-text with a global hotkey (offline Whisper, CPU)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Ryan Allen" }]
dependencies = [
    "faster-whisper==1.2.1",
    "ctranslate2==4.8.0",
    "av==17.1.0",
    "onnxruntime==1.27.0",
    "numpy==2.4.6",
    "sounddevice==0.5.5",
    "pynput==1.8.2",
    "pyperclip==1.11.0",
    "pystray==0.19.5",
    "Pillow==12.2.0",
]

[project.optional-dependencies]
build = ["huggingface-hub>=0.21"]

[project.scripts]
whisper-ptt = "whisper_ptt.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_ptt"]

[tool.hatch.build.targets.wheel.force-include]
# Ship the example config inside the package so first-run seeding works from
# an installed wheel, not just a source checkout (see config._example_config_bytes).
"config.example.toml" = "whisper_ptt/config.example.toml"

[tool.uv]
# Interpreter pinned to the uv-managed CPython 3.11.15 via .python-version
# (dodges missing 3.13/3.14 wheels for ctranslate2 / onnxruntime).
